Attempt at making mipmaps better (#1952)